@@ -37,7 +37,8 @@ StarPU 1.4.2
 Small features:
   * New functions starpu_mpi_data_cpy() and starpu_mpi_recv_prio()
   * New functions starpu_bind_thread_on_worker(),
-    starpu_bind_thread_on_main(), and starpu_bind_thread_on_cpu()
+    starpu_bind_thread_on_main(), starpu_bind_thread_on_cpu(),
+    and starpu_cpu_os_index()
 
 StarPU 1.4.1
 ==============================================
